5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_2426.log
== TEST (2019-03-26 10:25:37) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/tG)
km/l=(dT/12)
print(dT,vM)
-- ERROR:
File "XXXX", line 4
    km/l=(dT/12)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:10) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/tG)
km/l=(dT/12)
print(dT,km/l)
-- ERROR:
File "XXXX", line 4
    km/l=(dT/12)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:53) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/tG)
kml=((tG/vM)/12)
print(dT,km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dT,km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:07) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/tG)
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
11.11111111111111 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:34) 
-- CODE:
tG=int(input("tempo gasto: "))
vM=int(input("velocidade media: "))
dT=(vM/tG)
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
11.11111111111111 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:24) 
-- CODE:
tG=int(input("tempo gasto: "))
vM=int(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:39) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:59) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tg)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(tg)
NameError: name 'tg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:08) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
9.0
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:12) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
9.0
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:13) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
9.0
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:23) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
9.0
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:03) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
9.0
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:14) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG/60)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
0.15
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:21) 
-- CODE:
tG=float(input("tempo gasto: "))
print(tG/60)
vM=float(input("velocidade media: "))
dT=(vM/(tG/60))
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
0.15
666.6666666666667 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:41) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/(tG)
kml=((tG/vM)/12)
print(dT,kml)
-- ERROR:
File "XXXX", line 4
    kml=((tG/vM)/12)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:57) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM/tG)
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
11.11111111111111 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:49) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG/vM)/12)
print(dT,kml)
-- OUTPUT:
900.0 0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:31) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG/vM)/12)
print(dT,round(kml, 4)
-- ERROR:
File "XXXX", line 6
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:01) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG/vM)/12)
print(dT) print(kml, 4)
-- ERROR:
File "XXXX", line 5
    print(dT) print(kml, 4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:11) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG/vM)/12)
print(dT) 
print(kml, 4)
-- OUTPUT:
900.0
0.0075 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:29) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG/vM)/12)
print(dT) 
print(round(kml, 4))
-- OUTPUT:
900.0
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:10) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG*vM)/12)
print(dT,kml)
-- OUTPUT:
900.0 75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:37:16) 
-- CODE:
tG=float(input("tempo gasto: "))
vM=float(input("velocidade media: "))
dT=(vM*tG)
kml=((tG*vM)/12)
print(dT,kml)
-- EXECUTION TIME:
0.184049
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0 75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0 50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0 8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
